kustomize/base-openshift/shard/knative/broker-network-policy.yaml
# https://issues.redhat.com/browse/SRVKE-1216
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: kafka-broker-receiver
#  Due to https://github.com/kubernetes-sigs/kustomize/issues/880 we have to override it in overlays/<ENV>/kustomization.yaml
#  namespace: knative-eventing
  labels:
    app: kafka-broker-receiver
spec:
  podSelector:
    matchLabels:
      app: kafka-broker-receiver
