kustomize/base-openshift/shard/knative/webhook-network-policy.yaml
# https://issues.redhat.com/browse/SRVKE-1206
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: eventing-webhook
#  Due to https://github.com/kubernetes-sigs/kustomize/issues/880 we have to override it in overlays/<ENV>/kustomization.yaml
#  namespace: knative-eventing
  labels:
    app: eventing-webhook
spec:
  podSelector:
    matchLabels:
      app: eventing-webhook
